# Potentials

./: CMakeLists.txt  Potentials.cpp  Potentials.h
src/: ElementPot.cpp  ElementPot.h  EnsembleOfParticles.cpp  EnsembleOfParticles.h  GaussianElement.cpp  GaussianElement.h  Particle.cpp  Particle.h  Potential.cpp  Potential.h  Potentials.cpp
tests/: test_DummyPotentialElement.h  test_EnsembleOfParticles.cpp  test_GaussianElement.cpp  test_Particle.cpp  test_Potential.cpp
